--- a/src/app/green-post-list/green-post-list.component.html
+++ b/src/app/green-post-list/green-post-list.component.html
@@ -1,14 +1,26 @@
-<div class="card" *ngFor="let post of greenPosts">
-    <div class="card-body">
-      <h5 class="card-title">ID: {{ post.id }}</h5>
-      <p class="card-text">Description: {{ post.desc }}</p>
-      <p class="card-text">Profile: {{ post.profile }}</p>
-      <p class="card-text">
-        Colors:
-        <span *ngFor="let color of post.colors; let last = last">
-          {{ color }}<span *ngIf="!last">, </span>
-        </span>
-      </p>
+<div class="container custom-container p-4 min-vh-100 d-flex flex-column align-items-center">
+    <div class="w-100" style="max-width: 600px;">
+      <input 
+        type="text" 
+        placeholder="Search posts..." 
+        class="form-control mb-4"
+      />
+    </div>
+  
+    <div *ngFor="let post of greenPosts">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h5 class="card-title fw-bold">ID: {{ post.id }}</h5>
+          <p class="card-text">Description: {{ post.desc }}</p>
+          <p class="card-text">Profile: {{ post.profile }}</p>
+          <p class="card-text">
+            <strong>Colors:</strong>
+            <span *ngFor="let color of post.colors; let last = last">
+              {{ color }}<span *ngIf="!last">, </span>
+            </span>
+          </p>
+        </div>
+      </div>
     </div>
   </div>
   
